test/visibility/rename/renameUsedMod/renameSameNameEnumInScopeQualified.good
renameSameNameEnumInScopeQualified.chpl:9: In function 'main':
renameSameNameEnumInScopeQualified.chpl:10: error: 'L' is ambiguous
